@@ -17,6 +17,7 @@
 	* Send 'exit' command to classic debugger as well (supported since classic
 	  debugger backend 0.9.5)
 	* Better utilization of 'exit' and session ending/finishing
+	* RubyFrame and RubyFrameInfo override equal and hashcode
 
 0.7.1 - 0.7.2
 -------------
